@@ -1,3 +1,5 @@
+- Add newrelic and session_secret configs
+
 Pirozhki-ELK 0.3.2, 2015-07-12
 --------------------------
 - Rename project from `Pirozhki-docker` to `Pirozhki-ELK`.
